# gimic

./: .gitignore  Cargo.toml  README.md  example.yaml
src/: gimic.rs  lib.rs  main.rs
src/gimic/: gimic.rs
