[package]
name = "gimic"
version = "0.1.1"
edition = "2021"
license="MIT"
description="The solution for maintaining borrowed directories/files in remote repos"
repository="https://github.com/Antsthebul/gimic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.25"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.2"